# cookiecutter-python

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  main.py  mkdocs.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: test.yml
{{ cookiecutter.project_slug }}/docker/: entrypoint.sh
{{ cookiecutter.project_slug }}/scripts/: test
{{ cookiecutter.project_slug }}/{{ cookiecutter.module_name }}/: debug.py  tests.py
