[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"
debugpy = "^1.6.7.post1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.2.1"
mkdocs-coverage = "^1.0.0"

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "debugpy"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov={{ cookiecutter.project_slug }} --cov-report html --cov-report term --cov-config .coveragerc --doctest-modules"
python_functions = ["test_*", "*_test"]
python_classes = ["*Test", "Test*"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
markers = ["long"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
